changed banner color

--- a/app/assets/stylesheets/recipe.scss
+++ b/app/assets/stylesheets/recipe.scss
@@ -1,7 +1,7 @@
 @import "_colors";
 
 .banner {
-  background-image: linear-gradient(#F0FFD7, #B2E66F);
+  background-image: linear-gradient(#A2DC56, $primary-color);
   padding: 20px;
 
   img {
