--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -161,6 +161,11 @@ hr {
   border-bottom: 1px solid $white;
 }
 
+h1 {
+  color: $primary-color;
+  font-size: 2.5em;
+}
+
 /* Social media colors */
 .facebook {
   color: #3a5795
