--- a/app/views/recipes/_form.html.erb
+++ b/app/views/recipes/_form.html.erb
@@ -31,7 +31,7 @@
       </div>
     </div>
     <!-- Ingredients -->
-    <div class="ingredient">
+    <div class="ingredients">
       <strong>Ingredients</strong> (one ingredient per line)
       <div id="ingredient_list">
       <%= f.fields_for :ingredients do |ingredient_form|%>
