--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -37,17 +37,21 @@
     <div class="col-sm-4">
       <div class="field">
         <label>Ingredients</label>
-      <ul class="ingredient">
+      <ul class="ingredients">
       <% @recipe.ingredients.each do |ingredient| %>
-        <li><input type="checkbox" class="ingredient_checkbox"><%= ingredient.name %></li>
+        <li><input type="checkbox" class="check_strike"><%= ingredient.name %></li>
       <% end %>
       </ul>
       </div>
     </div>
     <div class="col-sm-8">
-      <div class="field">
+      <div class="field directions">
         <label>Direction:</label>
-        <%= simple_format(@recipe.directions) %>
+        <ul>
+          <% directions.each do |d| %>
+            <li><input type="checkbox" class="check_strike"><%= d %></li>
+          <% end %>
+        </ul>
       </div>
     </div>
   </div>
@@ -62,7 +66,7 @@
 </div>
   <script type="text/javascript">
   $(document).ready(function() {
-    $('.ingredient_checkbox').click(function() {
+    $('.check_strike').click(function() {
       var decorValue = "none";
       if ($(this).is(":checked")) {
         decorValue = "line-through"
