Fix how to content

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,8 +23,9 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav nav-main">
-            <li><a href="/">Browse</a></li>
-            <li><a href="/recipes/new">Add Recipe</a></li>
+            <li><a href="/static_pages/howto">How to</a></li>
+            <li><a href="/">Browse recipes</a></li>
+            <li><a href="/recipes/new">Add recipe</a></li>
           </ul>
           <ul class="nav navbar-nav nav-profile">
             <% if user_signed_in? %>
