--- a/app/views/static_pages/howto.html
+++ b/app/views/static_pages/howto.html
@@ -1,21 +1,20 @@
 <div class="howto">
 <h1>What's Dinner Assister?</h1>
-<h2>A website to help you plan your meals.</h2>
+<h2>Meal planning made easy.</h2>
 <hr />
 <ul>
   <li class="row">
     <div class="circle col-sm-4 yellow">1</div>
     <div class="col-sm-8 instructions">
       <h3>Add your recipes</h3>
-      Whether it's your grandma's secret or a recipe you found online, add it to your online recipe box. 
-      You can tags the recipes for easy organization. You can choose to share the recipe with public or keep it private. 
+      Whether it's your grandma's secret or a recipe you found online, add it to your online recipe box. Tag it with "main dish" to add it to your meal plan. Add other tags for easy organization. Recipe can be public or private.
     </div>
   </li>
   <li class="row">
     <div class="circle col-sm-4 orange">2</div>
     <div class="col-sm-8 instructions">
       <h3>Create your meal plans</h3>
-      Creating a meal plans is as easy as hitting a button. However, if you don't like what we generated, you can swap out meals or add more recipes to a meal.
+      Creating a meal plans is as easy as hitting a button. Don't like what you see? Swap what you don't and replace it with your desired recipes. One recipe is not enough? Add as many recipes as you can eat ;)
     </div>
   </li>
   <li class="row">
