Added browse by tag

--- a/app/assets/stylesheets/_colors.scss
+++ b/app/assets/stylesheets/_colors.scss
@@ -1,6 +1,7 @@
 $primary-color: #58940C;
-$light-primary-color: #F0FFD7;
+$light-primary-color: #DEFDD2;
 $secondary-color: #FB5F1C;
+$light-secondary-color: #FFE6BD;
 $secondary-dark-color: #4f3f35;
 $dark-gray: #333;
 $gray: #CFCFCF;
