--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -60,7 +60,7 @@
   </div>
   <div class="field">
     <% if editable? %>
-      <%= link_to 'Edit', edit_recipe_path(@recipe), class: "btn btn-primary" %>
+      <%= link_to 'Edit', edit_recipe_path(@recipe), class: "btn btn_primary" %>
     <% end %>
   </div>
 </div>
