--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -66,50 +66,38 @@
 <% end %>
 
   
-  <div class="content">
-
-<h1>Listing Recipes</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Name</th>
-      <th>Direction</th>
-      <th>Prep time</th>
-      <th>Cook time</th>
-      <th>Reviewed</th>
-      <th>Source url</th>
-      <th>Serving</th>
-      <th>Created by</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
-    <% @recipes.each do |recipe| %>
-      <tr>
-        <td><%= recipe.name %></td>
-        <td><%= recipe.directions %></td>
-        <td><%= recipe.prep_time %></td>
-        <td><%= recipe.cook_time %></td>
-        <td><%= recipe.reviewed %></td>
-        <td><%= recipe.source_url %></td>
-        <td><%= recipe.serving %></td>
-        <td><%= link_to 'Show', recipe %></td>
-        <td><%= link_to 'Edit', edit_recipe_path(recipe) %></td>
-        <td><%= link_to 'Destroy', recipe, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-
-<br>
-
-<%= link_to 'New Recipe', new_recipe_path %>
-
+<div class="content">
+  <ul class="row tag_list">
+    <li class="col-md-3">
+      <a href="/recipes/tags/meat">
+        <img src="/images/recipe/meat.jpg">
+        <span>Meat</span>
+      </a>
+    </li>
+    <li class="col-md-3">
+      <div>
+      <a href="/recipes/tags/vegetarian">
+        <img src="/images/recipe/vegetable.jpg">
+        <span>Vegetarian</span>
+      </a>
+      </div>
+    </li>
+    <li class="col-md-3">
+      <a href="/recipes/tags/soup">
+        <img src="/images/recipe/soup.jpg">
+        <span>Soup</span>
+      </a>
+    </li>
+    <li class="col-md-3">
+      <a href="/recipes/tags/dessert">
+        <img src="/images/recipe/dessert.jpg">
+        <span>Dessert</span>
+      </a>
+    </li>
+  </ul>
 </div>
-  <!-- // <script type="text/javascript" src="ci3_carousel.js"></script> -->
-  <%= javascript_include_tag "ci3_carousel" %> 
-  <script type="text/javascript">
-    $('.ci3').ci3();
-  </script>
+
+<%= javascript_include_tag "ci3_carousel" %> 
+<script type="text/javascript">
+  $('.ci3').ci3();
+</script>
