--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -186,6 +186,7 @@ h1 {
   color: #dd4b39;
 }
 
+input[type="checkbox"], 
 .radio input[type="radio"], 
 .radio-inline input[type="radio"], 
 .checkbox input[type="checkbox"], 
@@ -195,4 +196,16 @@ h1 {
   margin: 0;
   margin-right: 10px;
   position: relative;
+}
+
+.content .fa {
+  font-size: 2em;
+  cursor: default;
+}
+
+.alert, .notice {
+  background-color: #FFF;
+  box-shadow: 0px 1px 3px $gray;
+  border-radius: 5px;
+  padding: 10px;
 }
