--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -26,7 +26,7 @@
             <li><a href="/static_pages/howto">How to</a></li>
             <li><a href="/">Browse recipes</a></li>
             <li><a href="/recipes/new">Add recipe</a></li>
-            <li><a href="/recipes/all">All recipes</a></li>
+            <li><a href="/user/recipes">My recipes</a></li>
           </ul>
           <ul class="nav navbar-nav nav-profile">
             <% if user_signed_in? %>
