--- a/app/assets/stylesheets/style.scss
+++ b/app/assets/stylesheets/style.scss
@@ -102,6 +102,12 @@ input, textarea {
   background-color: $background;
 }
 
+input {
+  border: 0;
+  border-radius: 0;
+  border-bottom: 1px solid $gray;
+}
+
 button, .btn, input[type="submit"] {
   border: 1px solid $gray;
   background-color: $light-gray;
