wip add plan ui

--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -31,7 +31,8 @@
       padding: 10px;
       min-height: 305px;
       img {
-        min-height: 200px;
+        width: 150px;
+        height: 150px;
       }
     }    
   }
