--- a/app/assets/stylesheets/plans.scss
+++ b/app/assets/stylesheets/plans.scss
@@ -1,18 +1,35 @@
 .meal_plan {
+  display: inline-block;
+
   .week {
     div {
       display: inline-block;
     }
   }
 
-  .meal_day {
-    width: 13%;
+  .date {
     div {
-      display: block;
+      display: inline-block;
+      margin-right: 10px;
     }
+  }
+  .week {
+    /*position: fixed;*/
+    width: 200px;
+
+
+  }
+
+  .search {
+    max-width: 82%;
   }
 
   @media (max-width: 700px) {
 
   }
+
+      img {
+      width: 150px;
+      height: 150px;
+    }
 }
