--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -27,7 +27,7 @@
             <li><a href="/">Browse recipes</a></li>
             <li><a href="/recipes/new">Add recipe</a></li>
             <li><a href="/user/recipes">My recipes</a></li>
-            <li><a href="/meal_plans/new">Create meal plan</a></li>
+            <li><a href="/plans/new">Create meal plan</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <% if user_signed_in? %>
