--- a/app/assets/stylesheets/plans.scss
+++ b/app/assets/stylesheets/plans.scss
@@ -1,5 +1,28 @@
+@import "_colors";
+
 .meal_plan {
   display: inline-block;
+
+  hr {
+    margin-bottom: 10px;
+    margin-top: 0;
+  }
+
+  a {
+    color: $dark-gray;
+  }
+
+  a:hover, a:focus {
+    color: $secondary-color;
+  }
+
+  h2 {
+    margin-bottom: 0;
+  }
+
+  .new_plan {
+    margin-bottom: 16px;
+  }
 
   .week {
     div {
@@ -8,24 +31,87 @@
   }
 
   .date {
+    text-align: center;
     div {
       display: inline-block;
       margin-right: 10px;
     }
+    .field {
+      text-align: left;
+    }
   }
   .week {
-    /*position: fixed;*/
-    width: 200px;
+    width: 520px;
+  }
 
+  .meal_day {
+    width: 100%;
+    float: left;
+    margin-top: 15px;
+    padding: 10px;
+    background-color:rgba(256, 256, 256, 0.75);
+    border-radius: 10px;
+    border: 1px solid $light-gray;
+
+    img {
+      float: left;
+      margin-right: 27px;
+    }
+
+    label {
+      color: $secondary-color;
+      font-size: 2em;
+    }
+
+    span {
+      padding: 5px;
+    }
+  }
+
+  .meal_search {
+    margin-left: 50px;
+
+    input {
+      width: 100%;
+      font-size: 1.7em;
+    }
+
+    ul {
+      margin-left: 5px;
+      margin-top: 15px;
+    }
+
+    img {
+      width: 75px;
+      height: 75px;
+      float: left;
+      margin-right: 10px;
+    }
+
+    li {
+      /*background-color: $white;*/
+      background-color:rgba(256, 256, 256, 0.6);
+      margin: 10px;
+      border: 1px solid $light-gray;
+      border-radius: 5px;
+      padding: 7px;
+    }
+
+    label {
+      font-weight: normal;
+      display: inline;
+    }
 
   }
 
-  .search {
-    max-width: 82%;
-  }
+  @media (max-width: 1200px) {
+    .meal_search {
+      display: none;
+    }
 
-  @media (max-width: 700px) {
-
+    .week {
+      width: 100%;
+    }
   }
 
       img {
