--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -3,8 +3,8 @@
 .recipe_list {
   .icon {
     position: absolute;
-    right: 1em;
-    top: 1em;
+    right: 24px;
+    top: 20px;
     color: $gray;
   }
 
@@ -13,6 +13,7 @@
   }
   .row {
     li {
+      /*margin: 10px;*/
       padding: 15px;
     }
 
@@ -29,11 +30,12 @@
       border-radius: 5px;
       background-color: #FFF;
       padding: 10px;
-      min-height: 305px;
+      min-height: 225px;
+      min-width: 210px;
       img {
         width: 150px;
         height: 150px;
       }
-    }    
+    }
   }
 }
