--- a/app/views/plans/_form.html.erb
+++ b/app/views/plans/_form.html.erb
@@ -26,83 +26,82 @@
 
   </div>
 <% end %>
+
+<div class="row">
+  <div class="week col-sm-6">
+  <h2>Menu</h2>
+  <hr />
+  <div class="meal_day">
+    <img src="">
+    <label>Sunday</label><span><span class="glyphicon glyphicon-pencil"  aria-hidden="true"></span>Edit</span>
+    <hr />
+    <ul class="meal_recipe_list">
+      <li><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span><a href="">Roasted potatoes Roasted potatoesRoasted potatoesRoasted potatoesRoasted potatoesRoasted potatoes</a></li>
+      <li><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span><a href="">Roasted carrot</a></li>
+      <li><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span><a href="">Roasted yam</a></li>
+    </ul>
+  </div>
+    <div class="meal_day">
+    <img src="">
+    <label>Sunday</label><span><span class="glyphicon glyphicon-pencil"  aria-hidden="true"></span>Edit</span>
+    <hr />
+    <ul>
+      <li><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span><a href="">Roasted potatoes</a></li>
+      <li><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span><a href="">Roasted carrot</a></li>
+      <li><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span><a href="">Roasted yam</a></li>
+    </ul>
+  </div>
+    <div class="meal_day">
+    <img src="">
+    <label>Sunday</label><span><span class="glyphicon glyphicon-pencil"  aria-hidden="true"></span>Edit</span>
+    <hr />
+    <ul>
+      <li><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span><a href="">Roasted potatoes</a></li>
+      <li><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span><a href="">Roasted carrot</a></li>
+      <li><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span><a href="">Roasted yam</a></li>
+    </ul>
+  </div>
+    <div class="meal_day">
+    <img src="">
+    <label>Sunday</label><span><span class="glyphicon glyphicon-pencil"  aria-hidden="true"></span>Edit</span>
+    <hr />
+    <ul>
+      <li><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span><a href="">Roasted potatoes</a></li>
+      <li><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span><a href="">Roasted carrot</a></li>
+      <li><span class="glyphicon glyphicon-remove-circle" aria-hidden="true"></span><a href="">Roasted yam</a></li>
+    </ul>
+  </div>
+</div>
+
+<div class="meal_search col-sm-6">
+  <input placeholder="Search" id="search_recipe" type="text">
+  <ul class="row">
+    <% @recipes.each do |recipe| %>
+      <li class="col-sm-5 search_item">
+        <a href="/recipes/<%= recipe.id %>">
+          <input name="recipe[id][]" value="<%= recipe.id %>" type="hidden">
+          <%= image_tag recipe.photo.url(:small) %>
+          <label><%= shorten(recipe.name) %></label>
+        </a>
+      </li>
+    <% end %>
+  </ul>
+</div>
+
+</div>
+<script type="text/javascript">
+  $(document).ready(function() {
+
+
+  });
+</script>
+
 <script type="text/javascript">
   $(document).ready(function() {
     $('.datepicker').datepicker();
   });
 
   </script>
-
-<div class="row">
-  <div class="week col-sm-2">
-  <div class="meal_day">
-    <label>Sunday</label>
-    <div class="meal">
-      <img src="">
-    </div>
-  </div>
-  <div class="meal_day">
-    <label>Monday</label>
-    <div class="meal">
-      <img src="">
-    </div>
-  </div>
-  <div class="meal_day">
-    <label>Tuesday</label>
-    <div class="meal">
-      <img src="">
-    </div>
-  </div>
-  <div class="meal_day">
-    <label>Wednesday</label>
-    <div class="meal">
-      <img src="">
-    </div>
-  </div>
-  <div class="meal_day">
-    <label>Thursday</label>
-    <div class="meal">
-      <img src="">
-    </div>
-  </div>
-  <div class="meal_day">
-    <label>Friday</label>
-    <div class="meal">
-      <img src="">
-    </div>
-  </div>
-  <div class="meal_day">
-    <label>Saturday</label>
-    <div class="meal">
-      <img src="">
-    </div>
-  </div>
-</div>
-
-<div class="search recipe_list col-sm-10">
-  <ul class="row">
-    <% @recipes.each do |recipe| %>
-      <li class="col-sm-3">
-        <div>
-          <a href="/recipes/<%= recipe.id %>">
-            <input name="recipe[id][]" value="<%= recipe.id %>" type="hidden">
-            <%= image_tag recipe.photo.url(:small) %>
-            <label><%= shorten(recipe.name) %></label>
-          </a>
-        </div>
-      </li>
-    <% end %>
-  </ul>
-</div>
-</div>
-<script type="text/javascript">
-  $(document).ready(function() {
-    var elements = {'add_all_recipes': '#add_all_to_meal_plan',
-                    'add_to_meal_list': '.recipe_list .add_to_meal'};
-
-    bindUserRecipeListEvents(elements);
-  });
-</script>
 
 </div>
 </div>
