--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,6 +28,7 @@
             <li><a href="/recipes/new">Add recipe</a></li>
             <li><a href="/user/recipes">My recipes</a></li>
             <li><a href="/plans/new">Create meal plan</a></li>
+            <li><a href="/ingredients">Ingredients</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <% if user_signed_in? %>
