--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -2,10 +2,18 @@
 
 .recipe_list {
   .icon {
-    position: absolute;
-    right: 24px;
-    top: 20px;
     color: $gray;
+    font-size: 2em;
+  }
+
+  .icon:hover {
+    cursor: default;
+  }
+
+  .add_to_meal {
+    position: absolute;
+    right: 28px;
+    top: 24px;
   }
 
   .selected {
@@ -13,7 +21,6 @@
   }
   .row {
     li {
-      /*margin: 10px;*/
       padding: 15px;
     }
 
