--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -23,12 +23,11 @@
         </div>
         <div id="navbar" class="navbar-collapse collapse">
           <ul class="nav navbar-nav nav-main">
-            <li><a href="/static_pages/howto">How to</a></li>
-            <li><a href="/">Browse recipes</a></li>
             <li><a href="/recipes/new">Add recipe</a></li>
-            <li><a href="/user/recipes">My recipes</a></li>
             <li><a href="/plans/new">Create meal plan</a></li>
-            <li><a href="/ingredients">Ingredients</a></li>
+            <li><a href="/user/recipes">Recipe box</a></li>
+            <li><a href="/">Browse recipes</a></li>
+            <li><a href="/static_pages/howto">How to</a></li>
           </ul>
           <ul class="nav navbar-nav navbar-right">
             <% if user_signed_in? %>
