--- a/app/views/static_pages/howto.html
+++ b/app/views/static_pages/howto.html
@@ -1,34 +1,32 @@
 <div class="howto">
 <h1>What's Dinner Assister?</h1>
-<h2>Meal planning made easy.</h2>
-<hr />
-<ul>
-  <li class="row">
-    <div class="circle col-sm-4 yellow">1</div>
-    <div class="col-sm-8 instructions">
-      <h3>Add your recipes</h3>
-      Whether it's your grandma's secret or a recipe you found online, add it to your online recipe box. Tag it with "main dish" to add it to your meal plan. Add other tags for easy organization. Recipe can be public or private.
+<h2>A meal planner that saves <span class="color_orange"><i>you</i></span> time and money!</h2>
+<ul class="row">
+  <li class="col-sm-3">
+    <div class="circle yellow"><i class="fa fa-list"></i></div>
+    <div class="instructions">
+      <h2><a href="/recipes/new">Add recipes</a></h2>
+      <p>Whether it's your grandma's secret or recipe found you online, add it to your recipe box.</p>
     </div>
   </li>
-  <li class="row">
-    <div class="circle col-sm-4 orange">2</div>
-    <div class="col-sm-8 instructions">
-      <h3>Create your meal plans</h3>
-      Creating a meal plans is as easy as hitting a button. Don't like what you see? Swap what you don't and replace it with your desired recipes. One recipe is not enough? Add as many recipes as you can eat ;)
+  <li class="col-sm-3">
+    <div class="circle orange"><i class="fa fa-calendar icon"></i></div>
+    <div class="instructions">
+      <h2><a href="/plans/new">Create meal plan</a></h2>
+      <p>Add recipes to your week menu or let us generate one for you.</p>
     </div>
   </li>
-  <li class="row">
-    <div class="circle col-sm-4 red">3</div>
-    <div class="col-sm-8 instructions">
-      <h3>Get your groceries</h3>
-      Ready to go to the market? Bring your phone and check off items you got.
+  <li class="col-sm-3">
+    <div class="circle red"><i class="fa fa-cart-plus icon"></i></div>
+    <div class="instructions">
+      <h2><a href="/plans/1/groceries">Grocery list</a></h2>
+      <p>Ready to go to the market? Bring your phone and check off items as you grab them.</p>
     </div>
   </li>
-  <li class="row">
-    <div class="circle col-sm-4 brown">4</div>
-    <div class="col-sm-8 instructions">
-      <h3>Prepare your meal</h3>
-      No need to wonder what to make today. Viewing today's meal plan is only two click/tap away.
+  <li class="col-sm-3">
+    <div class="circle brown"><i class="fa fa-home"></i></div>
+    <div class="instructions">
+      <h2><a href="">Cook dinner!</a></h2>
     </div>
   </li>
 </ul>
