--- a/app/assets/stylesheets/static_pages.scss
+++ b/app/assets/stylesheets/static_pages.scss
@@ -4,26 +4,46 @@
   text-align: center;
 
   .circle {
-    font-size: 5em;
-    border: 2px solid;
+    font-size: 3em;
+    border: 1px solid;
     border-radius: 50%;
     color: $dark-gray;
+    /*background-color: $dark-gray;*/
     display: inline-block;
     font-weight: 600;
     text-align: center;
-    width: 1.5em;
-    height: 1.5em;
+    width: 3.5em;
+    height: 3.5em;
+    padding-top: 25px;
     margin-right: 15px;
+    vertical-align: middle;
+    line-height: 3em;
   }
 
   @media (min-width: 800px) {
     .instructions {
-      text-align: left;
+      p {
+        text-align: justify;
+        text-justify: inter-word;
+      }
+
+      h2 a {
+        color: $dark-gray;
+      }
+
+      h2 a:hover{
+        text-decoration: none;
+      }
+      h2 {
+        /*border-bottom: 1px solid $dark-gray;*/
+        width: 100%;
+      }
     }
   }
 
   li {
-    margin-top: 2em;
+    margin-top: 32px;
+    padding-right: 32px;
   }
 
   .yellow {
@@ -48,6 +68,10 @@
 
   h1 {
     font-size: 4em;
+  }
+
+  .color_orange {
+    color: $secondary-color;
   }
 }
 
